# squeeze

./: Cargo.toml  LICENSE  Makefile
hooks/: squeeze-rewrite.py
scripts/: register-hook.py  unregister-hook.py
src/: core.rs  dispatch.rs  lib.rs  lossless.rs  main.rs
src/parsers/: cargo_test.rs  gh_issue.rs  gh_pr.rs  git_diff.rs  git_log.rs  git_status.rs  go_test.rs  grep.rs  jest.rs  lint.rs  mod.rs  passthrough.rs  pytest.rs  test_common.rs  vitest.rs
tests/: integration.rs
