[package]
name = "cassie-compress"
version = "0.1.0"
edition = "2024"
description = "squeeze - lossless CLI output compressor for agent pipelines"
license = "MIT"

[[bin]]
name = "squeeze"
path = "src/main.rs"

[lib]
name = "squeeze"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
